Fix spacing issues within wizard component.

--- a/src/components/Wizard/Wizard.scss
+++ b/src/components/Wizard/Wizard.scss
@@ -186,7 +186,7 @@
     padding: 32px 16px 40px;
 
     @include do-this-above(md) {
-      padding: 40px 32px;
+      padding: 32px 32px 40px 32px;
     }
   }
 
@@ -231,6 +231,11 @@
 
   p {
     font-size: 18px;
+  }
+
+  &:last-of-type {
+    border: 1px solid red;
+    margin-bottom: 0;
   }
 }
 
